# telegram-support-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  i18n.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: bot.py
handlers/: message_handlers.py
services/: i18n_service.py  telegram_service.py
telegram_bot_support/app/: bot.py
telegram_bot_support/data/: i18n.json
telegram_bot_support/handlers/: message_handlers.py
telegram_bot_support/services/: i18n_service.py  storage_service.py  telegram_service.py
